# Internal-employee-rag-chatbot

./: .gitignore  README.md  embeddings.pkl  pyproject.toml  rag.py
